tests/javacresults/fail_badop_composition_addition.txt
Intermediate.java:1: class, interface, or enum expected
Fatal error: exception Failure("Cannot apply + - * / op to types composition + composition")
^
1 error
